# eww-data-gatherer

./: Cargo.toml
src/: config.rs  main.rs
src/actions/: mod.rs  toggle_idle.rs
src/listeners/: auto_idle.rs  bluetooth.rs  brightness.rs  mod.rs  network.rs  player.rs  volume.rs
src/manager/: mod.rs
