[package]
name = "ewwManager"
version = "0.0.1"
edition = "2021"

[dependencies]
toml = "0.8.14"
serde = "1.0.203"
image = "0.25.1"
serde_json = "1.0.118"
env_logger = "0.11.8"
log = "0.4.29"
udev = "0.9.3"
dirs = "6.0.0"
config = "0.15.19"
notify-rust = "4.11.7"
notify = "8.1.0"
sysinfo = "0.37.2"
libc = "0.2.178"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.12"

[profile.release]
lto = "fat"
opt-level = 3
strip = true 
codegen-units = 1
debug = 0
debug-assertions = false
